# gitstory

./: .gitignore  CLAUDE.md  LICENSE  README.md  TESTING.md  install.sh  pyproject.toml
.claude/: INTERVIEW_GUIDE.md  agents  commands  docs
.claude/agents/: AGENT_CONTRACT.md  README.md  design-guardian.md  discovery-orchestrator.md  git-state-analyzer.md  gitstory-command-prompt-improver.md  gitstory-design-guardian.md  gitstory-gap-analyzer.md  gitstory-git-state-analyzer.md  gitstory-pattern-discovery.md  gitstory-prompt-analyzer.md  gitstory-prompt-generator.md  gitstory-specification-quality-checker.md  gitstory-subagent-prompt-improver.md  gitstory-ticket-analyzer.md  pattern-discovery.md  specification-quality-checker.md  ticket-analyzer.md
.claude/commands/: discover.md  gitstory  plan-epic.md  plan-initiative.md  plan-story.md  review-ticket.md  start-next-task.md
.github/workflows/: ci.yml
agents/: gitstory-command-prompt-improver.md  gitstory-design-guardian.md  gitstory-discovery-orchestrator.md  gitstory-git-state-analyzer.md  gitstory-pattern-discovery.md  gitstory-prompt-analyzer.md  gitstory-prompt-generator.md  gitstory-specification-quality-checker.md  gitstory-subagent-prompt-improver.md  gitstory-ticket-analyzer.md
commands/gitstory/: command.md  create-subagent.md  discover.md  improve-command.md  improve-subagent.md  plan-epic.md  plan-initiative.md  plan-story.md  review-pr-comments.md  review-ticket.md  start-next-task.md  subagent.md
docs/: INSTALLATION.md  PLANNING_INTERVIEW_GUIDE.md
docs/tickets/: CLAUDE.md
tests/: __init__.py
(+99 files in other folders)
