[project]
name = "gitstory"
version = "0.1.0"
description = "Workflow-agnostic ticket management distributed as Claude Code plugin"
readme = "README.md"
authors = [
    { name = "Bram Swenson", email = "bram@craniumisajar.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.9",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
gitstory = "gitstory.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/gitstory --cov-report=term-missing"
